--- a/src/Components/missions/PACE/Aod_EOS.rc
+++ b/src/Components/missions/PACE/Aod_EOS.rc
@@ -32,11 +32,11 @@ r_channels: 0.470e-6
 # --------------------------------------------------------------
 #filename_optical_properties_DU: ExtData/g5chem/x.OLD/optics_DU.v1_pmom.nc
 #filename_optical_properties_DU: ExtData/g5chem/x/optics_DU.v5.nc
-filename_optical_properties_DU: ExtData/optics_DU.v15_5.nc
-filename_optical_properties_SS: ExtData/optics_SS.v3_5.nc
-filename_optical_properties_BC: ExtData/optics_BC.v1_5.nc
-filename_optical_properties_OC: ExtData/optics_OC.v1_5.nc
-filename_optical_properties_SU: ExtData/optics_SU.v1_5.nc
+filename_optical_properties_DU: ExtDataOsku/GRASP_LUT-DUST_V4.GSFun-300_fix.nc
+filename_optical_properties_SS: ExtDataOsku/optics_SS.v3_7.GSFun-300.nc
+filename_optical_properties_BC: ExtDataOsku/optics_BC.v5_7.GSFun.nc
+filename_optical_properties_OC: ExtDataOsku/optics_OC.v12_7.GSFun.nc
+filename_optical_properties_SU: ExtDataOsku/optics_SU.v5_7.GSFun.nc
 filename_optical_properties_NI:  ExtData/optics_NI.v2_5.nc
 filename_optical_properties_BRC: ExtData/optics_BRC.v1_5.nc
 
