PC - MieObs_ should install in lib/Python instead of lib/Python/Chem_Base

--- a/src/Shared/GMAO_Shared/Chem_Base/CMakeLists.txt
+++ b/src/Shared/GMAO_Shared/Chem_Base/CMakeLists.txt
@@ -22,7 +22,7 @@ find_package(F2PY2 REQUIRED)
 # MAT: Note uses add_f2py2 because I can't figure out the import test for netCDF f2py code
 add_f2py2_module(MieObs_ 
    SOURCES MieObs_py.F90 
-   DESTINATION lib/Python/${this}
+   DESTINATION lib/Python
    LIBRARIES Chem_Base MAPL GMAO_mpeu ${NETCDF_LIBRARIES} ${ESMF_LIBRARY}
    INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${esma_include}/Chem_Base ${BASEDIR}/lib ${include_${this}} ${INC_NETCDF}
    USE_MPI
