PC - testing out 2p8p1

--- a/src/Components/rtms/geo_vlidort/CMakeLists.txt
+++ b/src/Components/rtms/geo_vlidort/CMakeLists.txt
@@ -22,20 +22,20 @@ set (srcs
 
 esma_add_library (${this}
   SRCS ${srcs}
-  DEPENDENCIES MAPL.shared MAPL.base VLIDORT2OS LIDORT3p7 Chem_Base   DEPENDENCIES MAPL.shared MAPL.base VLIDORT2OS LIDORT3p7 Chem_Base ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  DEPENDENCIES MAPL.shared MAPL.base VLIDORT2p8p1 LIDORT3p7 Chem_Base   DEPENDENCIES MAPL.shared MAPL.base VLIDORT2p8p1 LIDORT3p7 Chem_Base ${NETCDF_LIBRARIES} MPI::MPI_Fortran
 
   )
 
 ecbuild_add_executable (
   TARGET geo_vlidort.x
   SOURCES geo_vlidort.F90
-  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2p8p1 geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
   )
 
 ecbuild_add_executable (
   TARGET geo_vlidort_cloud.x
   SOURCES geo_vlidort_cloud.F90
-  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2p8p1 geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
   )
 
 # this needs de-bugging/updates to new driver interfaces
