--- a/src/Components/misc/obs_aod/ABC/CMakeLists.txt
+++ b/src/Components/misc/obs_aod/ABC/CMakeLists.txt
@@ -4,9 +4,9 @@ find_package(F2PY2 REQUIRED)
 esma_add_f2py2_module (VLIDORT_BRDF_ABC_
   SOURCES VLIDORT_BRDF_ABC_py.F90
   DESTINATION lib/Python/${this}
-  LIBRARIES VLIDORT90
-  INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}} ${esma_include}/VLIDORT90)
-add_dependencies(VLIDORT_BRDF_ABC_ VLIDORT90)
+  LIBRARIES ${VLIDORT_LIBRARY}
+  INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}} ${esma_include}/${VLIDORT_LIBRARY})
+add_dependencies(VLIDORT_BRDF_ABC_ ${VLIDORT_LIBRARY})
 
 # these are non-executaables
 set (PYFILES
