--- a/src/Components/missions/ACCP/CMakeLists.txt
+++ b/src/Components/missions/ACCP/CMakeLists.txt
@@ -3,21 +3,21 @@ esma_set_this()
 ecbuild_add_executable (
   TARGET accp_polar_vlidort.x
   SOURCES accp_polar_vlidort.F90
-  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL ${VLIDORT_LIBRARY} geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
   NOINSTALL
   )
 
 ecbuild_add_executable (
   TARGET accp_polar_vlidort_singlegeom.x
   SOURCES accp_polar_vlidort_singlegeom.F90
-  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL ${VLIDORT_LIBRARY} geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
   NOINSTALL
   )
 
 ecbuild_add_executable (
   TARGET accp_polar_vlidort_cirrus.x
   SOURCES accp_polar_vlidort_cirrus.F90 cirrus_MieMod.F90
-  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL ${VLIDORT_LIBRARY} geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
   NOINSTALL
   )
 
