--- a/src/Components/misc/scat/CMakeLists.txt
+++ b/src/Components/misc/scat/CMakeLists.txt
@@ -6,8 +6,10 @@ find_package(F2PY2 REQUIRED)
 add_f2py2_module (Mie_
   SOURCES Mie_py.F90
   DESTINATION lib/Python/${this}
-  LIBRARIES Chem_Base GMAO_gfio_r4 ${NETCDF_LIBRARIES}
-  INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}} ${esma_include}/Chem_Base ${BASEDIR}/lib ${INC_NETCDF}
+  LIBRARIES Chem_Base GMAO_mpeu MAPL GMAO_gfio_r4 ${NETCDF_LIBRARIES}
+  INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib
+  ${include_${this}} ${esma_include}/Chem_Base ${BASEDIR}/lib ${INC_NETCDF}
+  USE_MPI
   )
 add_dependencies(Mie_ Chem_Base GMAO_gfio_r4)
 
@@ -15,8 +17,9 @@ add_dependencies(Mie_ Chem_Base GMAO_gfio_r4)
 add_f2py2_module (scat_MieObs_
   SOURCES scat_MieObs_py.F90
   DESTINATION lib/Python/${this}
-  LIBRARIES Chem_Base GMAO_mpeu ${NETCDF_LIBRARIES}
+  LIBRARIES Chem_Base GMAO_mpeu MAPL ${NETCDF_LIBRARIES}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}} ${esma_include}/Chem_Base ${BASEDIR}/lib ${INC_NETCDF}
+  USE_MPI
   )
 add_dependencies(scat_MieObs_ Chem_Base GMAO_mpeu)
 
