PC - add some rcfiles and python executable to make in OMI directory

--- a/src/Components/missions/OMI/CMakeLists.txt
+++ b/src/Components/missions/OMI/CMakeLists.txt
@@ -90,3 +90,22 @@ install (
     DESTINATION bin/missions/${this}
     )
 
+# these are executable scripts
+set (PYSCRIPTS
+    run_vlidort_orbital.py
+    )
+
+install (
+    PROGRAMS ${PYSCRIPTS}
+    DESTINATION	 bin/missions/${this}
+    )
+
+# these are non-executables
+set (RCFILES
+    pace_sampler.rc
+    )
+
+install (
+    FILES ${RCFILES}
+    DESTINATION bin/missions/${this}
+    )
