--- a/components.yaml
+++ b/components.yaml
@@ -5,23 +5,23 @@ AeroApps:
 env:
   local: ./env@
   remote: ../ESMA_env.git
-  tag: v3.2.2
+  tag: v4.8.0
   develop: main
 
 cmake:
   local: ./cmake@
   remote: ../ESMA_cmake.git
-  tag: v3.4.7
+  tag: v3.24.0
   develop: develop
 
 ecbuild:
   local: ./cmake@/ecbuild@
   remote: ../ecbuild.git
-  tag: geos/v1.0.6
+  tag: geos/v1.3.0
 
 MAPL:
   local: ./src/Shared/GMAO_Shared/MAPL@
   remote: ../MAPL.git
-  tag: v2.6.9
+  branch: feature/mathomp4/add-shavemantissa-python
   develop: develop
 
