--- a/src/Components/cda/clouds/CMakeLists.txt
+++ b/src/Components/cda/clouds/CMakeLists.txt
@@ -26,11 +26,11 @@ find_package(F2PY2 REQUIRED)
 
 esma_add_f2py2_module (Aero_
   SOURCES Aero_py.F90
-  LIBRARIES MAPL.shared MAPL.base
+  LIBRARIES MAPL.constants MAPL.base
   DESTINATION lib/Python/${this}
-  INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}} ${esma_include}/MAPL.shared ${esma_include}/MAPL.base
+  INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}} ${esma_include}/MAPL.constants ${esma_include}/MAPL.base
   )
-add_dependencies(Aero_ MAPL.shared MAPL.base)
+add_dependencies(Aero_ MAPL.constants MAPL.base)
 
 # MAT: Using add_f2py2 as I haven't figured out how to add MKL to python import test (needs vscdfnorm_)
 add_f2py2_module (ICA_
