PC - modified CMakelists in GMAO_aeropyobs to install these pyobs scripts that were left out of GMAO_pyobs@

--- a/src/Shared/GMAO_Shared/GMAO_aeropyobs/CMakeLists.txt
+++ b/src/Shared/GMAO_Shared/GMAO_aeropyobs/CMakeLists.txt
@@ -1,4 +1,5 @@
-
+file (GLOB python_files pyobs/*.py)
+install (FILES ${python_files} DESTINATION lib/Python/pyobs)
 
 # Python executables
 # ------------------
