add pyabc module to GAAS_App. the sknet class is needed to load the ffnet .net files

--- a/src/Applications/GAAS_App/CMakeLists.txt
+++ b/src/Applications/GAAS_App/CMakeLists.txt
@@ -30,6 +30,14 @@ ecbuild_add_executable (
   LIBS ${this}
   )
 
+# Install 'abc' package
+# ---------------------
+file (GLOB abc_files pyabc/*.py)
+install (
+    FILES ${abc_files}
+    DESTINATION lib/Python/pyabc
+    )
+
 # these are executable scripts
 set (PYSCRIPTS
     aeronet_all.py
