move pyabc module to GMAO_aeropyobs

--- a/src/Shared/GMAO_Shared/GMAO_aeropyobs/CMakeLists.txt
+++ b/src/Shared/GMAO_Shared/GMAO_aeropyobs/CMakeLists.txt
@@ -5,3 +5,10 @@ install (FILES ${python_files} DESTINATION lib/Python/pyobs)
 # ------------------
 install(PROGRAMS ext_sampler.py  stn_sampler.py  stn_xsect.py  trj_sampler.py  trj_xsect.py DESTINATION bin)
 
+# Install 'abc' package
+# ---------------------
+file (GLOB abc_files pyabc/*.py)
+install (
+    FILES ${abc_files}
+    DESTINATION lib/Python/pyabc
+    )
