--- a/components.yaml
+++ b/components.yaml
@@ -28,6 +28,5 @@ MAPL:
 GMAOpyobs:
   local: ./src/Shared/GMAO_Shared/GMAO_pyobs@
   remote: ../GMAOpyobs.git
-#  tag: v1.0.5
-  branch: feature/pcastell/nnr_output_ae
+  tag: v1.0.6
   develop: develop
