--- a/components.yaml
+++ b/components.yaml
@@ -28,5 +28,6 @@ MAPL:
 GMAOpyobs:
   local: ./src/Shared/GMAO_Shared/GMAO_pyobs@
   remote: ../GMAOpyobs.git
-  tag: v1.0.6
+#  tag: v1.0.6
+  branch: feature/pcastell/asia-aq
   develop: develop
