make sure plot_stn_timeseris installs as executable

--- a/src/Components/missions/ASIA-AQ/CMakeLists.txt
+++ b/src/Components/missions/ASIA-AQ/CMakeLists.txt
@@ -1,2 +1,8 @@
 install(DIRECTORY fluid/ DESTINATION bin/fluid)
 install(DIRECTORY ts_plotting DESTINATION bin/missions/ASIAAQ)
+
+# this is executable
+install (
+    PROGRAMS  ts_plotting/plot_stn_timeseries.py
+    DESTINATION bin/missions/ASIAAQ/ts_plotting
+    )
