temporary change to updated branches of cmake and env

--- a/components.yaml
+++ b/components.yaml
@@ -5,14 +5,16 @@ AeroApps:
 env:
   local: ./env@
   remote: ../ESMA_env.git
-  tag: v4.8.0
+#  tag: v4.8.0
   develop: main
+  branch: feature/mathomp4/update-geospyd
 
 cmake:
   local: ./cmake@
   remote: ../ESMA_cmake.git
-  tag: v3.28.0
+#  tag: v3.28.0
   develop: develop
+  branch: bugfix/mathomp4/meson-f2py-v3
 
 ecbuild:
   local: ./cmake@/ecbuild@
